I added a new feature (Tell us your problem,and we'll give you a solution). All buttons were checked to maintain consistency throughout the landing page. The statistics section is aligned correctly now.

--- a/css/main.css
+++ b/css/main.css
@@ -30,12 +30,15 @@ h3 {
 }
 
 p, 
-li {
+li,a {
     font-family: "Roboto Slab", sans-serif;
     font-size: 20;
     font-weight: normal;
 }
 
+a {
+    text-decoration: none;
+}
 /* Padding utilizado en la navbar */
 .icon-padding {
     margin-right: 10px;
@@ -53,6 +56,7 @@ li {
 /* CSS para cambiar el background de About us */
 .abus-background {
     background-color: #E9E7E6;
+    max-height: 730px;
 }
 
 .abus-text-bg {
@@ -72,14 +76,16 @@ li {
 /* CSS para la sección de estádisticas */
 .stat-img {
     max-width: 100%;
-    height: auto;
+    height: 150px;
     position: relative; 
-    top: -120px;
+    top: -50px;
 }
 
 /* css tarjeta de servicios */
 .services-container {
-    /* background-image: url(images\fondo-services.png); */
+    background-image: url("images\fondo-services.png");
+    background-size: cover;
+    background-position: center;
     position: relative; 
     top: -50px;
 }
@@ -114,18 +120,76 @@ li {
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
 .news-card img {
     height: 200px;
     object-fit: cover;
 }
+
 .news-card-body {
     padding: 15px;
 }
+
 .news-card-title {
     font-size: 1.25rem;
     margin-bottom: 10px;
 }
+
 .news-card-text {
     font-size: 1rem;
     color: #6c757d;
+}
+
+/* CSS Footer */
+footer {
+    min-height: 50px;
+}
+
+/* Dime tu problema, te doy soluciones */
+.solucion-container {
+    position: relative; 
+    top: -70px;
+}
+
+.question-section {
+    border-right: 1px solid #ddd;
+    max-width: 30%;
+}
+
+.product-card {
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    padding: 20px;
+    margin: 10px;
+    text-align: center;
+    height: 100%;
+}
+
+.product-tag {
+    display: inline-block;
+    padding: 5px 5px;
+    margin-bottom: 10px;
+    background-color: #f1f1f1;
+    border-radius: 5px;
+    width:auto;
+}
+
+.product-button {
+    margin-top: auto;
+}
+
+.product-image {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+}
+
+.custom-checkbox {
+    transform: scale(1.5);
+    margin-left: auto;
+    display: block;
+}
+
+.test-container {
+    background-color: #6c757d;
 }
